Fix right hand margin showing past the limit of navbar. P elements set to 'container-fluid'

--- a/learn.html
+++ b/learn.html
@@ -44,10 +44,10 @@
     </nav>
   </header>
     <h1 class="display-1"> Prehistoric Pals!</h1>
-    <h2 class="display-2"> The who's-who of the last iceage</h2>
+    <h2> The who's-who of the last iceage</h2>
 <main>
   <h3> What were 'megafauna'? </h3>
-  <p>
+  <p class="container-fluid">
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, provident. Consequuntur unde reprehenderit, laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta omnis expedita in.
   </p>
 
