--- a/index.html
+++ b/index.html
@@ -44,20 +44,28 @@
     </nav>
   </header>
     <h1 class="display-1"> Prehistoric Puzzler</h1>
-    <h2 class="display-2"> Test your memory and learn about Earth's extinct monster megafauna!</h2>
+    <h2> Test your memory and learn about Earth's extinct monster megafauna!</h2>
 <main>
   <h3> Instructions </h3>
-  <p>
+  <p class="container-fluid">
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, provident. Consequuntur unde reprehenderit, laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta omnis expedita in.
   </p>
 <div class="gameboard">
-  <div class="cards">
-    <ul class="card">
+    <ul class="cards">
+    <li class="card">
+      <div class="view front-image">
+        <img src="assets/images/stone-question-mark." alt="question mark icon">
+      </div>
+        <div class="view back-image">
+          <img src="assets/images/smilodon." alt="An image of a smilodon or sabre-tooth tiger">
+      </div>
 
+    </li>
     </ul>
   </div>
 </div>
 </main>
+<p><a href="https://www.textstudio.com/">Font generator</a></p>
 
   <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -65,6 +73,8 @@
   </script>
   <!-- Font Awesome kit -->
   <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
+ 
+  
   <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
   <script>
     document
