commit ahead of meeting

--- a/learn.html
+++ b/learn.html
@@ -50,11 +50,25 @@
   <p class="container-fluid">
     Lorem ipsum, dolor sit amet consectetur adipisicing elit. Magnam, provident. Consequuntur unde reprehenderit, laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta omnis expedita in.
   </p>
-
-      
-    </ul>
+<section id="information">
+  <div class="container-fluid">
+    <div class="row">
+      <div class="col-sm-12 col-6">
+        <div class="card">
+          <img class="card-img-top" src="assets/images/glyptodon.webp" alt="Image of glyptodon">
+          <div class="card-body">
+            <h5 class="card-title">Glyptodon
+            </h5>
+            <p class="card-text">Glyptodon is a genus of glyptodont, an extinct group of large, herbivorous armadillos.
+            </p>
+            <a href="https://en.wikipedia.org/wiki/Glyptodon" target="_blank" class="btn btn-primary">Find out more about Glyptodon on Wikipedia
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
-</div>
+</section>
 </main>
 
   <!-- Bootstrap JS -->
