--- a/learn.html
+++ b/learn.html
@@ -55,8 +55,8 @@
     <div class="row">
       <div class="col-sm-12 col-6">
         <div class="card">
-          <img class="card-img-top" src="assets/images/glyptodon.webp" alt="Image of glyptodon">
-          <div class="card-body">
+          <img class="card-img-top img-responsive" src="assets/images/glyptodon.webp" alt="Image of glyptodon">
+          <div class="card-body card-block">
             <h5 class="card-title">Glyptodon
             </h5>
             <p class="card-text">Glyptodon is a genus of glyptodont, an extinct group of large, herbivorous armadillos.
