Create startGame() funtion in script.js to allow the gameboard to appear and the startscreen message to disappear on click

--- a/index.html
+++ b/index.html
@@ -56,105 +56,104 @@
       laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta
       omnis expedita in.
     </p>
-    <div id="startScreen">
+    <section id="startScreen">
       <div>
         <h1>Prehistoric Puzzler</h1>
       </div>
-      <div>
-        <button onclick="startPageMessage()" class="btn btn-success">Click here to begin!</button>
-      </div>
-      <section id="gameboard">
-        <div class="gameboard-background">
-          <div class="row">
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
+      <button id="startBtn" class="btn btn-success">Click here to begin!</button>
+    </section>
+    <section id="gameboard">
+      <div class="gameboard-background">
+        <div class="row">
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
             </div>
           </div>
-          <div class="row">
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
             </div>
           </div>
-          <div class="row">
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
             </div>
           </div>
-          <div class="row">
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
-            </div>
-            <div class="col-3">
-              <div class="card">
-                <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-              </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
             </div>
           </div>
         </div>
-      </section>
+        <div class="row">
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </main>
 
 
@@ -171,7 +170,7 @@
   </script>
   <!-- Font Awesome kit -->
   <script src="https://kit.fontawesome.com/aa9af45995.js" crossorigin="anonymous"></script>
-  <script src="js/script.js"></script>
+  <script src="assets/js/script.js"></script>
 
   <!-- JavaScript code to ensure the Bootstrap mobile navbar collapses when navigating to in-page links -->
   <script>
