Change animal pictures for cards to make them of equal size

--- a/index.html
+++ b/index.html
@@ -56,110 +56,209 @@
       laudantium repudiandae, odit quisquam voluptates officia veritatis tenetur iusto atque sapiente nostrum id soluta
       omnis expedita in.
     </p>
+    <!--Start screen message-->
     <section id="startScreen">
       <div>
         <h1>Prehistoric Puzzler</h1>
       </div>
-      <button id="startBtn" class="btn btn-success">Click here to begin!</button>
+      <div>
+        <button id="startBtn" class="btn btn-success">Click here to begin!</button>
+      </div>
+      <br>
     </section>
+    <!--Gameboard with cards-->
     <section id="gameboard">
       <div class="gameboard-background">
         <div class="row">
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/glyptodon.webp" class="card-img img-fluid" alt="">
+              <div class="card-body d-flex align-items-end mt-auto">
+                <h6 class="card-title">Glyptodon</h6>
+              </div>
             </div>
           </div>
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/irish-elk.webp" class="card-img img-fluid" alt="">
+              <div class="card-body d-flex align-items-end mt-auto">
+                <h6 class="card-title">Irish Elk</h6>
+              </div>
             </div>
           </div>
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/megatherium.webp" class="card-img img-fluid" alt="">
+              <div class="card-body text-wrap d-flex align-items-end mt-auto">
+                <h6 class="card-title">Megatherium</h6>
+              </div>
             </div>
           </div>
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
             </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
-            </div>
-          </div>
-          <div class="col-3">
-            <div class="card">
-              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            <div class="card card-back h-50">
+              <img src="assets/images/short-faced-bear.webp" class="card-img img-fluid" alt="">
+              <div class="card-body d-flex align-items-end mt-auto">
+                <h6 class="card-title">Short-faced Bear</h6>
+              </div>
             </div>
           </div>
         </div>
+        <br>
         <div class="row">
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/smilodon.webp" class="card-img img-fluid" alt="">
+              <div class="card-body d-flex align-items-end mt-auto">
+                <h6 class="card-title">Smilodon</h6>
+              </div>
             </div>
           </div>
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/steppe-bison.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text text-center">
+                <p>Steppe Bison</p>
+              </div>
             </div>
           </div>
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/titanis.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text text-center">
+                <p>Titanis</p>
+              </div>
             </div>
           </div>
           <div class="col-3">
-            <div class="card">
+            <div class="card card-front">
               <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back h-50">
+              <img src="assets/images/woolly-mammoth.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text text-center">
+                <p>Woolly Mammoth</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back h-50">
+              <img src="assets/images/megatherium.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text text-center">
+                <p>Megatherium</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/steppe-bison.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Steppe Bison</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/titanis.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Titanis</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/glyptodon.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Gylptodon</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/short-faced-bear.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Short-faced Bear</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/woolly-mammoth.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Woolly Mammoth</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/smilodon.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Smilodon</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-3">
+            <div class="card card-front">
+              <img src="assets/images/stone-question-mark.webp" class="card-img" alt="question mark">
+            </div>
+            <div class="card card-back">
+              <img src="assets/images/irish-elk.webp" class="card-img img-fluid" alt="">
+              <div class="card-body card-text">
+                <p>Irish Elk</p>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </section>
   </main>
-
-
-
-
-
   <div>
     <br>
     <p class="source-link"><a href="https://www.textstudio.com/">Font generator</a></p>
